# Mentor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  mypy_script.sh  pyproject.toml
src/datasets/real-world/Dribbble/: README.md  generator.ipynb
src/datasets/real-world/Dribbble/data/: nodes_attribute.pkl  nodes_name.pkl  teams_continuous_label.pkl  teams_label.pkl  teams_name.pkl
src/datasets/real-world/Dribbble/preprocessing/: 1. Users.ipynb  10. Teams.ipynb  11. Cross-checking '_count' features.ipynb  (+10 more)
src/datasets/real-world/IMDb/: README.md  generator.ipynb
src/datasets/real-world/Kaggle/: README.md  generator.ipynb
src/datasets/synthetic/: utils.py
src/datasets/synthetic/attribute/: README.md  generator.ipynb
src/datasets/synthetic/position/: README.md  generator.ipynb
src/datasets/synthetic/position-topology/: README.md  generator.ipynb
src/datasets/synthetic/topology/: README.md  generator.ipynb
src/models/: load_dataset.py
src/models/baselines/: README.md  extra_features.py  get_features.py  main.bash  main.py  utils.py
src/models/baselines/LR/: model.py  train.py
src/models/baselines/MLP/: model.py  train.py
src/models/baselines/RF/: model.py  train.py
src/models/baselines/SVM/: model.py  train.py
src/models/baselines/XGBoost/: model.py  train.py
src/models/mentor/: README.md  test.bash  test.py  train.bash  train.py  utils.py
src/models/mentor/model/: anchors.py  hetero_data.py  model.py
src/models/mentor/notebooks/: analysis.ipynb  histogram.Rmd  inference.ipynb  ternary_plot.Rmd  training.ipynb
(+1530 files in other folders)
