[tool.poetry]
name = "mentor"
version = "0.1.0"
description = ""
authors = ["PFoini<pietro.foini1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
notebook = "7.0.2"
ipywidgets = "8.0.6"
matplotlib = "3.4.3"
seaborn = "0.11.1"
pandas = "2.0.3"
numpy = "1.25.2"
networkx = "2.5"
scikit-learn = "0.24.1"
scipy = "1.5.4"
openpyxl = "3.1.2"
powerlaw = "1.4.6"
optuna = "3.3.0"
pytorch-lightning = "1.5.0"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.8.0%2Bcu111-cp39-cp39-win_amd64.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_scatter-2.0.7-cp39-cp39-win_amd64.whl"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_sparse-0.6.10-cp39-cp39-win_amd64.whl"}
torch-cluster = {url = "https://data.pyg.org/whl/torch-1.8.0%2Bcu111/torch_cluster-1.5.9-cp39-cp39-win_amd64.whl"}
torch-geometric = "2.0.1"
torchcontrib = "0.0.2"
xgboost = "2.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.12"
black = "^22"
mypy = "^1.3"
pre-commit = "^3.3"
pydocstyle = "^6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180
exclude = '''
/(\n  \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  | dockerfile\n  | \.md\n  | \.txt\n  | \.gitignore\n  | \.lock\n)/\n
'''
[tool.isort]
# make it compatible with black
profile = "black"
line_length = 180
